turmites.lessons.turmites.turmitecreator.TurmiteCreator.scala.error
Turmite:48: error: ')' expected but ';' found.
  setPos(8;33)
          ^Turmite:48: error: ';' expected but ')' found.
  setPos(8;33)
             ^